# news-cli

./: .gitignore  CONTRIBUTING.md  README.md  ROADMAP.md  pyproject.toml
src/news_cli/: __main__.py  article.py  cli.py  http_client.py
src/news_cli/sources/: __init__.py  base.py  hackernews.py  techcrunch.py  venturebeat.py
