[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "news-cli"
version = "0.3.1"
description = "Search multiple news sources and read articles as plain text in the terminal"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "trafilatura>=1.8",
]

[project.scripts]
cli-news = "news_cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/news_cli"]

[tool.hatch.build.targets.sdist]
include = ["src/news_cli"]

[tool.hatch.build]
dev-mode-dirs = ["src"]
